# cpp-Template-Updated

./: .clang-format  CMakeLists.txt
src/: main.cpp
